# magnetic_mischief

./: .gitignore  README.md  pyproject.toml
scripts/: run_deflection_test.py  run_gui.py  sten_gerlach_experiment.py  stern_gerlach_experiment.py
src/game/: simulation.py
src/gui/: main_window.py  widgets.py
src/physics/: __init__.py  fields.py  particles.py  spin_state.py  visualization.py
src/visualization/: deflection_plot.py
tests/: test_deflection.py  test_particles.py  test_physics.py  test_spin_states.py
